<resources>
    <string name="app_name">G9_comp3074</string>
    <string name="btn_search">Search</string>
    <string name="btn_col">Collection</string>
    <string name="btn_new">New Entry</string>
    <string name="btn_about">About</string>
    <string name="btn_more">More</string>
    <string name="label_phone">Phone: %1$s</string>
    <string name="label_hours">Hours: %1$s</string>
    <string name="label_address">Address: %1$s</string>
    <string name="label_tags">Tags: %1$s</string>
    <string name="search_hint">Restaurant name...</string>
</resources>