<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".RestActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:title="Entry Details"
        app:navigationIcon="@drawable/abc_ic_ab_back_material" />

    <Button
        android:id="@+id/button7"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Options" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="PIZZA PIZZA PIZZ"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">



            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Description:"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:text="Description of the restaurant, what they're about, the type of
food they serve, the inspiration or reasoning behind the restaurant."
                android:textColor="@color/black"
                android:textColorHighlight="@color/white"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Phone#: 123-456-7890" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Hours:9am-9pm Weekdays" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Address: 123-Location St" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Tag:HALA" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/_0180427_googlemaps" />


        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:textSize="10sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_col"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_col"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_col"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btn_search"
            app:layout_constraintEnd_toStartOf="@+id/btn_new"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_new"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_col"
            app:layout_constraintEnd_toStartOf="@+id/btn_about"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_about"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_new"
            app:layout_constraintEnd_toStartOf="@+id/btn_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_more"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
