<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".NewActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:title="New Entry"
        app:navigationIcon="@drawable/abc_ic_ab_back_material" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#FFFFFF"
        android:hint="Restaurant Name"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Description:"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:hint="Restaurant Description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="4"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!-- TODO: if possible, make the surrounding border black-->
            <EditText
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/white"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/white"
                android:hint="Operation Hours"

                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/white"
                android:hint="Address"
                android:inputType="textPostalAddress"

                android:textAlignment="center"
                android:textColor="@color/black" />


            <!--TODO: HOW DOES TAGS WORK-->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tag_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:singleLine="false">

            </com.google.android.material.chip.ChipGroup>
            <Button
                android:id="@+id/btn_add_tag"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+ Add New Tag"
                android:layout_gravity="start"/>

            <!-- This container will hold the Google Map fragment -->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>


            <Button
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Entry" />


        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:textSize="10sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_col"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_col"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_col"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btn_search"
            app:layout_constraintEnd_toStartOf="@+id/btn_new"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_new"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_col"
            app:layout_constraintEnd_toStartOf="@+id/btn_about"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_about"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_new"
            app:layout_constraintEnd_toStartOf="@+id/btn_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_more"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/btn_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
